    - update debian/patches/mozilla-kde.patch
    - update debian/patches/series
  * Fix LP: #898883 - IPC xpcshell tests hang the buildd's. Give all
    xpcshell tests an X display, as plugin-container won't work without one
    - update debian/build/testsuite.mk
  * Turn on all IPC xpcshell tests again
    - update debian/build/testsute.mk

  [ Adam Conrad <adconrad@ubuntu.com> ]
  * Add missing build-dep on non-essential locales, since we use it.
    - update debian/control{,.in}

  [ Jamie Strandboge <jamie@ubuntu.com> ]
  * debian/usr.bin.firefox.apparmor.12.04: don't use @{MOZ_LIBDIR} variable
    for the binary names

 -- Chris Coulson <chris.coulson@canonical.com>  Wed, 14 Dec 2011 22:09:02 +0000

firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v10.0 A1 HG20111108R79928

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r264
    - Fix LP: #864511 - Icons not displayed in history/bookmarks menus
  * Make sure the filename of our symbol index is of the format that
    upstream expects
    - update debian/patches/change-moz-app-name.patch
  * Don't fail to create the tarball if locales listed in all-locales don't
    really exist upstream. We already check that everything in shipped-locales
    exists
    - update debian/create-tarball.py
  * Update patches for PRBool -> bool transition
    - refresh debian/patches/firefox-kde.patch
    - refresh debian/patches/mozilla-kde.patch
  * Drop some more hanging IPC xpcshell tests
    - update debian/build/testsuite.mk
  * Borrow functionality from Chromium package to have distro-version
    specific patches
    - update debian/rules
    - add debian/build/enable-dist-patches.pl
  * Don't enable unity-globalmenu-build-support.patch on lucid and maverick
    - update debian/patches/series
  * Remove prerm hook for cleaning up pyc files in the apport package-hooks
    folder. Nothing creates these