@@ -2,6 +2,3 @@
 debian/tmp@MOZ_LIBDIR@/components/libnkgnomevfs.so
 %%endif
 debian/tmp@MOZ_LIBDIR@/components/libmozgnome.so
-%%ifndef MOZ_DISABLE_CONTROL_CENTER
-debian/@MOZ_APP_NAME@.xml /usr/share/gnome-control-center/default-apps
-%%endif
