@@ -1,17 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE default-apps SYSTEM "gnome-da-list.dtd">
-<default-apps>
-  <web-browsers>
-    <web-browser>
-      <name>@MOZ_DISPLAY_NAME@</name>
-      <executable>@MOZ_APP_NAME@</executable>
-      <command>@MOZ_APP_NAME@ %s</command>
-      <icon-name>@MOZ_APP_NAME@</icon-name>
-      <run-in-terminal>false</run-in-terminal>
-      <netscape-remote>true</netscape-remote>
-      <tab-command>@MOZ_APP_NAME@ -new-tab "%s"</tab-command>
-      <win-command>@MOZ_APP_NAME@ -new-window "%s"</win-command>
-    </web-browser>
-  </web-browsers>
-</default-apps>
-
