@@ -261,7 +261,6 @@ ifeq (1,$(MOZ_BUILD_PGO))
 endif
 ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "1104" && echo "1"))
 	DEB_DEFINES += -DMOZ_DISABLE_GNOMEVFS
-	DEB_DEFINES += -DMOZ_DISABLE_CONTROL_CENTER
 endif
 ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "1204" && echo "1"))
 	DEB_DEFINES += -DMOZ_DISABLE_GCONF
